@@ -44,6 +44,7 @@
 - Hash-Mode 10420: set native_threads to 32 with Apple GPU's
 - Hash-Mode 18200: set native_threads to 32 with Apple GPU's
 - Hash-Mode 25400: set native_threads to 32 with Apple GPU's
+- Hash-Mode 7500: set native_threads to 32 with Apple GPU's
 
 ##
 ## Technical
